Added All Activities And Fragments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.SettingActivity"></activity>
+        <activity android:name=".Activity.SettingActivity" />
+        <activity android:name=".Activity.AddBirthdayActivity" />
+        <activity android:name=".Activity.EditBirthdayActivity" />
+        <activity android:name=".Activity.UserVerifyActivity"></activity>
     </application>
 
 </manifest>
