--- a/Android Application/app/build.gradle
+++ b/Android Application/app/build.gradle
@@ -24,7 +24,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
@@ -32,4 +32,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.github.citux:datetimepicker:0.2.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.github.citux:datetimepicker:0.2.0'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+
+    implementation 'com.github.nanjingboy:image-picker:2.0.0'
 }
