--- a/Android Application/app/src/main/AndroidManifest.xml
+++ b/Android Application/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.seeds.seeds_birthdayreminder">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,10 +22,23 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activity.SettingActivity" />
-        <activity android:name=".Activity.AddBirthdayActivity"
-            android:windowSoftInputMode="adjustResize"/>
+        <activity
+            android:name=".Activity.AddBirthdayActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".Activity.EditBirthdayActivity" />
-        <activity android:name=".Activity.UserVerifyActivity"></activity>
+        <activity android:name=".Activity.UserVerifyActivity" />
+
+        <!-- Will not be called unless the application explicitly enables it -->
+        <receiver android:name=".Alarm.AlarmReceiver" />
+
+        <activity android:name=".Activity.AlarmActivity"></activity>
+        <activity android:name="me.tom.image.picker.activity.FolderPickerActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name="me.tom.image.picker.activity.ImagePickerActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name="me.tom.image.picker.activity.MultipleImagePickerActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
 </manifest>
